objects/Operations_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Opportunity__r.Account.Owner.FirstName&amp;Opportunity__r.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_By__c</fullName>
        <label>Action By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Expedited_Shipping__c</fullName>
        <label>Additional Expedited Shipping?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aging_Days_2__c</fullName>
        <formula>IF(ISBLANK(Request_Completed_Date__c) , NOW()-CreatedDate, Request_Completed_Date__c-CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Days__c</fullName>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Freight_Reason__c</fullName>
        <inlineHelpText>Provide 1-2 sentences on why air freight is being requested. EX: Vendor delay is pushing up against client&apos;s delivery date.</inlineHelpText>
        <label>Air Freight Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applies_to__c</fullName>
        <label>Applies to?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whole Opportunity</fullName>
                </value>
                <value>
                    <fullName>By Line (see below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved at &gt; 50% OH</fullName>
                </value>
                <value>
                    <fullName>Approved at &lt; 50% OH</fullName>
                </value>
                <value>
                    <fullName>Not Approved, place SPO</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>Customer Declined</fullName>
                </value>
                <value>
                    <fullName>Logistics Operations</fullName>
                </value>
                <value>
                    <fullName>Planning Operations</fullName>
                </value>
                <value>
                    <fullName>Product Operations</fullName>
                </value>
                <value>
                    <fullName>Executive Approval</fullName>
                </value>
                <value>
                    <fullName>Kesha Weldon</fullName>
                </value>
                <value>
                    <fullName>Back to PM</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Pricing__c</fullName>
        <label>Approved Pricing ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attribute_Color_Finish__c</fullName>
        <inlineHelpText>Color Code or Description</inlineHelpText>
        <label>Attribute/Color/Finish</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>Opportunity__r.Balance_Due_NEW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog__c</fullName>
        <label>Catalog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RH Main</fullName>
                </value>
                <value>
                    <fullName>RH Modern</fullName>
                </value>
                <value>
                    <fullName>RH Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>RH Teen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checked_Inventory_CW_Web_Home_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I checked Inventory CW, Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Lead_Time__c</fullName>
        <label>Confirmed Lead Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Shipment__c</fullName>
        <label>Consolidated Shipment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - stocked items</fullName>
                </value>
                <value>
                    <fullName>Yes - dropship items</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consolidation__c</fullName>
        <label>Consolidation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Shelf Stock</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Furn &amp; Shelf</fullName>
                </value>
                <value>
                    <fullName>Furn, Shelf &amp; DS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Customer_Segmentation__c</fullName>
        <formula>TEXT( Opportunity__r.Account.Contract_Customer_Segmentation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Customer Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <formula>TEXT(Opportunity__r.Credit_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Specification_Info__c</fullName>
        <inlineHelpText>Info about what needs to be customized</inlineHelpText>
        <label>Custom Specification Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Decline_Reason__c</fullName>
        <inlineHelpText>Explain why the customer declined the request and not proceed with the order.</inlineHelpText>
        <label>Customer Decline Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Margin</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Changed Mind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Lifetime_Spend__c</fullName>
        <formula>Opportunity__r.Account.Total_Acct_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Lifetime Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Spend_YTD__c</fullName>
        <formula>Opportunity__r.Account.Total_Spend_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Spend YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Tracking__c</fullName>
        <label>Customer Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_or_RH_Expense__c</fullName>
        <label>Customer or RH Expense?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
                <value>
                    <fullName>RH Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_s_Pick_up_Date__c</fullName>
        <label>Customer&apos;s Pick-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Location__c</fullName>
        <label>DC Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>89 - ODC</fullName>
                </value>
                <value>
                    <fullName>95 - SFDC</fullName>
                </value>
                <value>
                    <fullName>96 - DDC</fullName>
                </value>
                <value>
                    <fullName>97 - LADC</fullName>
                </value>
                <value>
                    <fullName>98 - MDC</fullName>
                </value>
                <value>
                    <fullName>Direct to Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_Location_del__c</fullName>
        <label>DC Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>89 - ODC</fullName>
                </value>
                <value>
                    <fullName>95 - SFDC</fullName>
                </value>
                <value>
                    <fullName>96 - DDC</fullName>
                </value>
                <value>
                    <fullName>97 - LADC</fullName>
                </value>
                <value>
                    <fullName>98 - MDC</fullName>
                </value>
                <value>
                    <fullName>Direct to Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Delivery__c</fullName>
        <label>Date of Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_Needed__c</fullName>
        <label>Delivery Method Needed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery to Final Location - Full Install</fullName>
                </value>
                <value>
                    <fullName>Delivery to Port - In box</fullName>
                </value>
                <value>
                    <fullName>Delivery to Location - In box</fullName>
                </value>
                <value>
                    <fullName>White Glove</fullName>
                </value>
                <value>
                    <fullName>Mid-Tier - Delivery w/ Dock</fullName>
                </value>
                <value>
                    <fullName>Mid-Tier - No Dock available, need lift gate</fullName>
                </value>
                <value>
                    <fullName>Pallet Shipment</fullName>
                </value>
                <value>
                    <fullName>Other (note in Special Instructions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_need_a_CAD__c</fullName>
        <label>Do you need a CAD?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dom_Int_del__c</fullName>
        <inlineHelpText>Domestic - Request to move good outside of HDL Network
International - Request to move good outside of the existing US or Canada structure</inlineHelpText>
        <label>Dom/Int</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drop_Ship_PO__c</fullName>
        <inlineHelpText>Gives Ops Team visibility to placed Drop Ship order.</inlineHelpText>
        <label>Drop Ship PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELC_Calculator__c</fullName>
        <defaultValue>&quot;elc/index/login&quot;</defaultValue>
        <label>ELC Calculator</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ELC__c</fullName>
        <label>ELC ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Delivery_Type__c</fullName>
        <label>Final Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mid-Tier - Dock Delivery</fullName>
                </value>
                <value>
                    <fullName>Mid Tier - Lift Gate Required</fullName>
                </value>
                <value>
                    <fullName>White Glove</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Shipping_Address__c</fullName>
        <label>Final Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foam_Fill__c</fullName>
        <label>Foam Fill</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Reticulated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight_Cost_Per_Unit__c</fullName>
        <label>Freight Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Cost_of_Project__c</fullName>
        <label>Freight Cost of Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Quote_Status__c</fullName>
        <label>Freight Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Type__c</fullName>
        <label>Fulfillment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dropship</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>SPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_Pickup__c</fullName>
        <label>Furniture Pickup?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HDL__c</fullName>
        <label>HDL#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indoor_Outdoor__c</fullName>
        <label>Indoor/Outdoor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_Created_By__c</fullName>
        <formula>IF( CreatedBy.Id  = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner Created By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Logged_In_User__c</fullName>
        <formula>IF(OwnerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Custom_Item__c</fullName>
        <label>Is this a Custom Item?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_UPS_shipment__c</fullName>
        <label>Is this a UPS shipment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_quote_or_an_approved_request__c</fullName>
        <label>Is this a quote or an approved request?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logistics_Co_Phone__c</fullName>
        <inlineHelpText>Enter &quot;N/A&quot; if no furniture items</inlineHelpText>
        <label>Logistics Co. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Logistics_Company_Email__c</fullName>
        <label>Logistics Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Logistics_Company_Name_from_PO__c</fullName>
        <inlineHelpText>Enter &quot;N/A&quot; if no furniture items</inlineHelpText>
        <label>Logistics Company Name from PO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMU_Approved__c</fullName>
        <label>MMU% Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <label>MOQ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Discount__c</fullName>
        <inlineHelpText>What discount are you offering product to the client?</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 BALTIMORE</fullName>
                </value>
                <value>
                    <fullName>3 BOSTON</fullName>
                </value>
                <value>
                    <fullName>5 AUSTIN TX</fullName>
                </value>
                <value>
                    <fullName>6 SEATTLE WA</fullName>
                </value>
                <value>
                    <fullName>7 NY/NJ NJ</fullName>
                </value>
                <value>
                    <fullName>8 LOS ANGELES</fullName>
                </value>
                <value>
                    <fullName>9 ATLANTA</fullName>
                </value>
                <value>
                    <fullName>10 NORTH FLORIDA</fullName>
                </value>
                <value>
                    <fullName>11 SOUTH FLORIDA</fullName>
                </value>
                <value>
                    <fullName>12 SALT LAKE CITY UT</fullName>
                </value>
                <value>
                    <fullName>13 PORTLAND OR</fullName>
                </value>
                <value>
                    <fullName>14 LAS VEGAS NV</fullName>
                </value>
                <value>
                    <fullName>16 CHICAGO IL</fullName>
                </value>
                <value>
                    <fullName>17 EDINA/ST. PAUL MN</fullName>
                </value>
                <value>
                    <fullName>19 PHOENIX AZ</fullName>
                </value>
                <value>
                    <fullName>21 BATON ROUGE LA</fullName>
                </value>
                <value>
                    <fullName>22 SAN ANTONIO TX</fullName>
                </value>
                <value>
                    <fullName>24 COLUMBUS OH</fullName>
                </value>
                <value>
                    <fullName>25 INDY IN</fullName>
                </value>
                <value>
                    <fullName>26 KANSAS CITY MO</fullName>
                </value>
                <value>
                    <fullName>27 NASHVILLE TN</fullName>
                </value>
                <value>
                    <fullName>28 ST. LOUIS MO</fullName>
                </value>
                <value>
                    <fullName>29 DETROIT MI</fullName>
                </value>
                <value>
                    <fullName>30 TULSA OK</fullName>
                </value>
                <value>
                    <fullName>32 EDMONTON AB</fullName>
                </value>
                <value>
                    <fullName>33 MONTREAL CAN</fullName>
                </value>
                <value>
                    <fullName>34 VANCOUVER BC</fullName>
                </value>
                <value>
                    <fullName>35 TORONTO CAN</fullName>
                </value>
                <value>
                    <fullName>38 CLEVELAND OH</fullName>
                </value>
                <value>
                    <fullName>40 HIGH POINT NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Contact_with_Client__c</fullName>
        <inlineHelpText>When PM or TL has committed to next communicating with client</inlineHelpText>
        <label>Next Contact with Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked will trigger workflow rule to send operations an email alert.</inlineHelpText>
        <label>Notify Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Opportunity/Project lookup field</description>
        <inlineHelpText>Opportunity Lookup Field</inlineHelpText>
        <label>Opportunity/Project</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Operations Requests</relationshipLabel>
        <relationshipName>Operations_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Number__c</fullName>
        <formula>Opportunity__r.Final_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpsNotesLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, at least one related Operations Request Line Item record has a non-blank Ops Notes field.</inlineHelpText>
        <label>OpsNotesLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ops_Notes__c</fullName>
        <label>Ops Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>RH_Order__c.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Operations Requests (Order)</relationshipLabel>
        <relationshipName>Operations_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Verified__c</fullName>
        <inlineHelpText>Has verified PO been received and order is ready to place?</inlineHelpText>
        <label>PO Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_del__c</fullName>
        <label>PO#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_in_DC_Date__c</fullName>
        <label>PO in DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <label>Payment Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Handover_Date__c</fullName>
        <inlineHelpText>This is the date that the client takes possession of goods. - needed to determine lead time</inlineHelpText>
        <label>Product Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Information__c</fullName>
        <label>Product Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Background__c</fullName>
        <inlineHelpText>Please provide 3 to 5 sentences explaining the project scope</inlineHelpText>
        <label>What&apos;s at Stake/Why urgent?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Product Information Questions</inlineHelpText>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_to_place_dropship__c</fullName>
        <label>Ready to place dropship?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Operations_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to another Operations Request</description>
        <inlineHelpText>Related to another Operations Request</inlineHelpText>
        <label>Related Operations Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Operations_Request__c.Is_Owner_Created_By__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Operations_Request__c</referenceTo>
        <relationshipLabel>Related Operations Requests</relationshipLabel>
        <relationshipName>Operations_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Completed_Date__c</fullName>
        <label>Request Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <formula>Opportunity__r.Installation_Deadline_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
</CustomObject>